--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -6,3 +6,6 @@ server.port=8761
 
 eureka.username=eureka
 eureka.password=password
+
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability= 1.0
