--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>inventory-service</module>
         <module>discovery-server</module>
         <module>api-gateway</module>
+        <module>notication-service</module>
     </modules>
 
     <properties>
